--- a/public/index.html
+++ b/public/index.html
@@ -391,11 +391,13 @@
             fetch('/get-readings')
                 .then(response => response.json())
                 .then(data => {
-                    const allEntries = data; // Verwenden Sie alle Datensätze
+                    // Sortiere die Daten nach dem Datum absteigend
+                    data.sort((a, b) => new Date(b.timestamp) - new Date(a.timestamp));
+
                     const tableBody = document.querySelector('#readingsTable tbody');
                     tableBody.innerHTML = '';
 
-                    allEntries.forEach((entry, index) => {
+                    data.forEach((entry, index) => {
                         const row = document.createElement('tr');
                         const dateCell = document.createElement('td');
                         const daysSinceLastReadingCell = document.createElement('td');
@@ -449,14 +451,14 @@
                         actionCell.appendChild(deleteButton);
 
                         if (index > 0) {
-                            const lastDate = new Date(allEntries[index - 1].timestamp);
+                            const lastDate = new Date(data[index - 1].timestamp);
                             const timeDiff = date - lastDate;
                             const hours = timeDiff / (1000 * 60 * 60);
                             const days = hours / 24;
                             daysSinceLastReadingCell.textContent = days.toFixed(2);
                             hoursSinceLastReadingCell.textContent = hours.toFixed(2);
 
-                            const lastConsumption = parseFloat(calculateConsumption(parseFloat(allEntries[index - 1].reading), year));
+                            const lastConsumption = parseFloat(calculateConsumption(parseFloat(data[index - 1].reading), year));
                             const consumptionSinceLast = consumptionValue - lastConsumption;
                             consumptionSinceLastReadingCell.textContent = consumptionSinceLast.toFixed(3);
 
@@ -497,13 +499,149 @@
                         tableBody.appendChild(row);
                     });
 
-                    // Filterung beim Laden der Tabelle basierend auf dem ausgewählten Jahr
-                    const selectedYear = document.getElementById('yearFilter').value;
-                    filterTableByYear(selectedYear);
+                    // Spalten sichtbar/unsichtbar machen
+                    document.getElementById('showDate').addEventListener('change', function() {
+                        document.querySelectorAll('.date').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[0];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showDate', this.checked);
+                    });
 
-                    // Filterung bei Änderungen des Jahresfilters
-                    document.getElementById('yearFilter').addEventListener('change', function() {
-                        filterTableByYear(this.value);
+                    document.getElementById('showDaysSinceLastReading').addEventListener('change', function() {
+                        document.querySelectorAll('.daysSinceLastReading').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[1];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showDaysSinceLastReading', this.checked);
+                    });
+
+                    document.getElementById('showHoursSinceLastReading').addEventListener('change', function() {
+                        document.querySelectorAll('.hoursSinceLastReading').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[2];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showHoursSinceLastReading', this.checked);
+                    });
+
+                    document.getElementById('showConsumptionSinceLastReading').addEventListener('change', function() {
+                        document.querySelectorAll('.consumptionSinceLastReading').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[3];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showConsumptionSinceLastReading', this.checked);
+                    });
+
+                    document.getElementById('showMeterReading').addEventListener('change', function() {
+                        document.querySelectorAll('.meterReading').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[4];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showMeterReading', this.checked);
+                    });
+
+                    document.getElementById('showForecast').addEventListener('change', function() {
+                        document.querySelectorAll('.forecast').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[5];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showForecast', this.checked);
+                    });
+
+                    document.getElementById('showConsumption').addEventListener('change', function() {
+                        document.querySelectorAll('.consumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[6];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showConsumption', this.checked);
+                    });
+
+                    document.getElementById('showForecastConsumption').addEventListener('change', function() {
+                        document.querySelectorAll('.forecastConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[7];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showForecastConsumption', this.checked);
+                    });
+
+                    document.getElementById('showDeviation').addEventListener('change', function() {
+                        document.querySelectorAll('.deviation').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[8];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showDeviation', this.checked);
+                    });
+
+                    document.getElementById('showTotalForecast').addEventListener('change', function() {
+                        document.querySelectorAll('.totalForecast').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[9];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showTotalForecast', this.checked);
+                    });
+
+                    document.getElementById('showTotalConsumption').addEventListener('change', function() {
+                        document.querySelectorAll('.totalConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[10];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showTotalConsumption', this.checked);
+                    });
+
+                    document.getElementById('showTotalForecastConsumption').addEventListener('change', function() {
+                        document.querySelectorAll('.totalForecastConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[11];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showTotalForecastConsumption', this.checked);
+                    });
+
+                    document.getElementById('showTotalDeviation').addEventListener('change', function() {
+                        document.querySelectorAll('.totalDeviation').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[12];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showTotalDeviation', this.checked);
+                    });
+
+                    document.getElementById('showForecastDailyConsumption').addEventListener('change', function() {
+                        document.querySelectorAll('.forecastDailyConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[13];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showForecastDailyConsumption', this.checked);
+                    });
+
+                    document.getElementById('showAverageDailyConsumption').addEventListener('change', function() {
+                        document.querySelectorAll('.averageDailyConsumption').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[14];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showAverageDailyConsumption', this.checked);
+                    });
+
+                    document.getElementById('showActions').addEventListener('change', function() {
+                        document.querySelectorAll('.actions').forEach(cell => cell.style.display = this.checked ? '' : 'none');
+                        document.querySelectorAll('tbody tr').forEach(row => {
+                            const cell = row.children[15];
+                            cell.style.display = this.checked ? '' : 'none';
+                        });
+                        localStorage.setItem('showActions', this.checked);
                     });
 
                     // Wiederherstellen der Checkbox-Zustände
@@ -541,6 +679,11 @@
                     document.getElementById('showForecastDailyConsumption').dispatchEvent(new Event('change'));
                     document.getElementById('showAverageDailyConsumption').dispatchEvent(new Event('change'));
                     document.getElementById('showActions').dispatchEvent(new Event('change'));
+
+                    // Filter nach Jahr anwenden
+                    document.getElementById('yearFilter').addEventListener('change', function() {
+                        filterTableByYear(this.value);
+                    });
                 })
                 .catch(error => console.error('Fehler beim Laden der Daten:', error));
         }
